WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
201130
[Nicosia] Polish ScrollingCoordinator implementation
https://bugs.webkit.org/show_bug.cgi?id=201130
Summary
[Nicosia] Polish ScrollingCoordinator implementation
Zan Dobersek
Reported
2019-08-26 00:40:12 PDT
[Nicosia] Polish ScrollingCoordinator implementation
Attachments
Patch
(2.68 KB, patch)
2019-08-26 00:43 PDT
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zan Dobersek
Comment 1
2019-08-26 00:43:31 PDT
Created
attachment 377231
[details]
Patch
EWS Watchlist
Comment 2
2019-08-26 00:45:59 PDT
Attachment 377231
[details]
did not pass style-queue: ERROR: Source/WebCore/page/scrolling/nicosia/ScrollingCoordinatorNicosia.cpp:63: More than one command on the same line [whitespace/newline] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Zan Dobersek
Comment 3
2019-08-28 23:11:53 PDT
Comment on
attachment 377231
[details]
Patch Clearing flags on attachment: 377231 Committed
r249241
: <
https://trac.webkit.org/changeset/249241
>
Zan Dobersek
Comment 4
2019-08-28 23:11:57 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2019-08-28 23:12:17 PDT
<
rdar://problem/54825067
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug