[Nicosia] Polish ScrollingCoordinator implementation https://bugs.webkit.org/show_bug.cgi?id=201130

Reviewed by Carlos Garcia Campos.

These changes primarily mirror the Mac implementation of this class.

* page/scrolling/nicosia/ScrollingCoordinatorNicosia.cpp:
(WebCore::ScrollingCoordinatorNicosia::pageDestroyed):
Upon releasing the ThreadedScrollingTree, it should also be invalidated
on the scrolling thread.
(WebCore::ScrollingCoordinatorNicosia::commitTreeState):
Invoke willCommitTree() at the beginning of this method. Additionally
the pending-commit-count is incremented for the ThreadedScrollingTree
object.


Canonical link: https://commits.webkit.org/214935@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249241 268f45cc-cd09-0410-ab3c-d52691b4dbfc