Source/WebCore/page/scrolling/nicosia/ScrollingCoordinatorNicosia.cpp
@@ -58,7 +58,9 @@ void ScrollingCoordinatorNicosia::pageDestroyed()
 
     m_scrollingStateTreeCommitterTimer.stop();
 
-    releaseScrollingTree();
+    // Invalidating the scrolling tree will break the reference cycle between the ScrollingCoordinator and ScrollingTree objects.
+    RefPtr<ThreadedScrollingTree> scrollingTree = static_pointer_cast<ThreadedScrollingTree>(releaseScrollingTree());
+    ScrollingThread::dispatch([scrollingTree] { scrollingTree->invalidate(); });
 }
 
 void ScrollingCoordinatorNicosia::commitTreeStateIfNeeded()
@@ -80,10 +82,13 @@ void ScrollingCoordinatorNicosia::scheduleTreeStateCommit()
 
 void ScrollingCoordinatorNicosia::commitTreeState()
 {
+    willCommitTree();
+
     if (!scrollingStateTree()->hasChangedProperties())
         return;
 
     RefPtr<ThreadedScrollingTree> threadedScrollingTree = downcast<ThreadedScrollingTree>(scrollingTree());
+    threadedScrollingTree->incrementPendingCommitCount();
 
     auto treeState = scrollingStateTree()->commit(LayerRepresentation::PlatformLayerRepresentation);
     ScrollingThread::dispatch([threadedScrollingTree, treeState = WTFMove(treeState)]() mutable {
